css/queries.css
/* 65*16 = 1040px */
@media (max-width: 65em) {
  .home {
    height: 100%;
    display: grid;
    padding: 150px 25px 0 25px;
    justify-items: center;
    justify-content: center;
  }

  .header {
    position: absolute;
  }

  .home-content {
    padding-top: 25px;
  }

  .home-image {
    width: 325px;
    height: 325px;
  }

  .home-image img {
    max-width: 296px;
  }

  .home-content {
    text-align: center;
  }

  .portfolio {
    padding-top: 50px;
    display: grid;
    gap: 20px;
  }

  .btn-mobile-nav {
    display: block;
    z-index: 1000;
  }

  .navbar {
    background-color: rgba(200, 200, 200, 0.95);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    transform: translateX(100%);

    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 1s ease-in;

    flex-direction: column;
    gap: 4.8rem;

    /* display: none; */
    opacity: 0;
    pointer-events: none;
    visibility: hidden;
  }

  .nav-open .navbar {
    opacity: 1;
    pointer-events: auto;
    visibility: visible;
    transform: translateX(0);
  }

  .navbar a:link,
  .navbar a:visited {
    font-size: 2.5rem;
  }

  .nav-open .bx.bx-x-circle {
    display: block;
  }

  .nav-open .bx.bx-menu {
    display: none;
  }
}

/* 38*16 = 600px */
@media (max-width: 38em) {
  .portfolio {
    height: 100%;
    display: grid;
  }

  .container {
    margin: 30px;
  }
}

